# simplEdit

./: .gitignore  Makefile.am  README.md  TODO.md  configure.ac
data/: Makefile.am  simpledit.desktop.in
po/: Makevars  POTFILES.in  en.po  fr.po  simpledit.pot
src/: Makefile.am  net.thepozer.simpledit.gschema.xml  simplEdit.SimpleditAppWindow.glade  simplEdit.SimpleditPrefDialog.glade  simplEdit.SimpleditSearchDialog.glade  simplEdit.glade  simplEdit.gresources.xml  simplEdit_app.c  simplEdit_app.h  simplEdit_content.c  simplEdit_content.h  simplEdit_main.c  simplEdit_main.h  simplEdit_pref_dialog.c  simplEdit_pref_dialog.h  simplEdit_search_dialog.c  simplEdit_search_dialog.h  simplEdit_window.c  simplEdit_window.h
